--- a/day-4/footer.css
+++ b/day-4/footer.css
@@ -5,6 +5,7 @@ body{
 #foterdown{
     background-color: #4a4a4a;
     height: 245px;
+    width: 100%;
 }
 #foter{
     font-family: Arial, Helvetica, sans-serif;
