--- a/Archives.css
+++ b/Archives.css
@@ -1,14 +1,44 @@
+body{
+    background-color: #E3E6E3;
+}
+#let{
+    width: 68%;
+    background-color: white;
+    margin: auto;
+    padding: 15px;
+}
+#let>div:first-child{
+    display: flex;
+    gap: 10px;
+}
+#let>div:first-child>a{
+    text-decoration: none;
+    color: black;
+}
+#let>div:first-child>a:last-child{
+    color: #009270;
+}
 #main{
     display: flex;
 }
+#main>h1{
+    font-size: 18px;
+}
 .left-side{
     display: flex;
+    gap: 15px;
 }
 .right-side{
     display: grid;
     grid-template-columns: repeat(4,70px);
     grid-template-rows: repeat(2,40px);
     gap: 20px;
+}
+.left-side>h1{
+    width: 180px;
+}
+.left-side>h1+div{
+    margin-top: 20px;
 }
 .left-side>h1+div>div{
     display: flex;
@@ -20,4 +50,22 @@
 }
 .left-side>h1+div>div>a:hover{
     text-decoration: underline;
+}
+a+p{
+    color: grey;
+    font-size: 10px;
+    margin-left: 7px;
+}
+#RrR div{
+    font-size: 13px;
+    padding-left: 10px;
+}
+#LlL{
+    font-size: 15px;
+}
+.right-side>div{
+    background-color: #f5f5f5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
