--- a/day-3/footer.css
+++ b/day-3/footer.css
@@ -1,10 +1,7 @@
-body{
-    margin: 0px;
-    padding: 0px;
-}
 #foterdown{
     background-color: #4a4a4a;
     height: 245px;
+    width: 100%;
 }
 #foter{
     font-family: Arial, Helvetica, sans-serif;
@@ -12,6 +9,7 @@ body{
 #foter{
     width: 70%;
     margin: auto;
+    background-color: #4a4a4a;
 }
 #logo{
     width: 100px;
@@ -46,7 +44,7 @@ body{
 #foter>div>div:last-child>a:hover{
     text-decoration: underline;
 }
-h2+div{
+#foter h2+div{
     display: flex;
     flex-direction: column;
     gap: 15px;
